--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/internal/cron/settle-races",
-      "schedule": "*/10 * * * *"
+      "schedule": "0 3 * * *"
     }
   ]
 }
