Add invite email delivery via Resend with env wiring

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ WEB_PUSH_SUBJECT=mailto:you@example.com
 
 # Internal jobs
 SETTLEMENT_CRON_SECRET=
+
+# Invite email delivery (Resend)
+RESEND_API_KEY=
+INVITE_EMAIL_FROM=
